added CardView as a product item

--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -6,7 +6,8 @@
     android:name="com.example.ecommerce.ProductListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/margin_regular"
+    android:paddingTop="@dimen/list_padding"
+    android:paddingBottom="@dimen/list_padding"
     app:layoutManager="LinearLayoutManager"
     tools:context=".ProductListFragment"
     tools:listitem="@layout/fragment_list_item_product" />
