--- a/app/src/main/res/layout/fragment_list_item_product.xml
+++ b/app/src/main/res/layout/fragment_list_item_product.xml
@@ -9,10 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
 
+    <!-- it will be necessary to change layout of this -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/item_number"
@@ -27,6 +32,11 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:textAppearance="?attr/textAppearanceListItem" />
+
+        <androidx.appcompat.widget.AppCompatRatingBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="?android:attr/ratingBarStyleSmall"/>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
