--- a/app/src/main/res/layout/fragment_list_item_product.xml
+++ b/app/src/main/res/layout/fragment_list_item_product.xml
@@ -16,6 +16,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/product_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
