--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="margin_small">8dp</dimen>
     <dimen name="margin_regular">16dp</dimen>
+    <dimen name="margin_big">32dp</dimen>
     <dimen name="list_padding">20dp</dimen>
+
+    <dimen name="product_name_text_size_small">14sp</dimen>
+    <dimen name="product_price_text_size_small">13sp</dimen>
 </resources>
