--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,18 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="colorControlActivated">@color/yellow</item>
+    </style>
+
+    <style name="ProductNameSmallStyle">
+        <item name="android:textSize">@dimen/product_name_text_size_small</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="ProductPriceSmallStyle">
+        <item name="android:textSize">@dimen/product_price_text_size_small</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">normal</item>
     </style>
 </resources>
