--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="margin_regular">16dp</dimen>
     <dimen name="margin_big">32dp</dimen>
     <dimen name="list_padding">20dp</dimen>
+    <dimen name="fab_margin_bottom">40dp</dimen>
 
     <dimen name="product_name_text_size_small">14sp</dimen>
     <dimen name="product_price_text_size_small">13sp</dimen>
