removed unused text from fab

--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -22,6 +22,5 @@
         android:layout_marginBottom="@dimen/fab_margin_bottom"
         android:src="@drawable/ic_action_add"
         android:contentDescription="@string/add_to_order"
-        android:layout_marginEnd="@dimen/margin_regular"
-        android:text="Buy"/>
+        android:layout_marginEnd="@dimen/margin_regular" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
