--- a/app/src/main/res/layout/fragment_reviews_tab.xml
+++ b/app/src/main/res/layout/fragment_reviews_tab.xml
@@ -1,18 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <!--  TODO: add recycler view for reviews  -->
-    <TextView
-        android:id="@+id/details_reviews"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="Here will be product reviews" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:paddingTop="@dimen/list_padding"
+    android:paddingBottom="@dimen/list_padding">
+</androidx.recyclerview.widget.RecyclerView>
