adjusted review list item

--- a/app/src/main/res/layout/fragment_description_tab.xml
+++ b/app/src/main/res/layout/fragment_description_tab.xml
@@ -8,6 +8,9 @@
         android:id="@+id/details_description"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/margin_regular"
+        android:layout_marginStart="@dimen/margin_regular"
+        android:layout_marginEnd="@dimen/margin_regular"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
