--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="margin_big">32dp</dimen>
     <dimen name="list_padding">20dp</dimen>
     <dimen name="fab_margin_bottom">40dp</dimen>
+    <dimen name="rating_margin_small">2dp</dimen>
 
     <dimen name="product_name_text_size_small">14sp</dimen>
     <dimen name="product_price_text_size_small">13sp</dimen>
