--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,6 @@
 
     <dimen name="product_name_text_size_small">14sp</dimen>
     <dimen name="product_price_text_size_small">13sp</dimen>
+    <dimen name="product_name_text_size_big">18sp</dimen>
+    <dimen name="product_price_text_size_big">16sp</dimen>
 </resources>
