--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,9 +21,17 @@
         <item name="android:textStyle">normal</item>
     </style>
 
+    <style name="ProductNameBigStyle" parent="ProductNameSmallStyle">
+        <item name="android:textSize">@dimen/product_name_text_size_big</item>
+    </style>
+
     <style name="ProductPriceSmallStyle">
         <item name="android:textSize">@dimen/product_price_text_size_small</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="ProductPriceBigStyle" parent="ProductPriceSmallStyle">
+        <item name="android:textSize">@dimen/product_price_text_size_big</item>
     </style>
 </resources>
