--- a/app/src/main/res/layout/fragment_list_item_review.xml
+++ b/app/src/main/res/layout/fragment_list_item_review.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginBottom="@dimen/margin_regular">
+    android:layout_marginBottom="@dimen/margin_big">
 
     <LinearLayout
         android:id="@+id/review_info"
