--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -8,13 +8,18 @@
         android:id="@+id/order_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin_regular"
+        app:layout_constraintBottom_toTopOf="@+id/order_content"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <LinearLayout
+        android:id="@+id/order_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/order_recyclerview">
+        android:layout_marginBottom="150dp"
+        app:layout_constraintTop_toBottomOf="@id/order_recyclerview"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
             android:id="@+id/order_sum"
