--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="colorControlActivated">@color/yellow</item>
+        <item name="android:windowTranslucentNavigation">false</item>
     </style>
 
     <style name="ProductNameSmallStyle">
