--- a/app/src/main/res/layout/list_item_order.xml
+++ b/app/src/main/res/layout/list_item_order.xml
@@ -1,23 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="@dimen/margin_regular">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginStart="@dimen/margin_small"
+        android:layout_marginEnd="@dimen/margin_small"
+        android:layout_marginTop="@dimen/margin_big"
+        android:layout_marginBottom="@dimen/margin_small">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"/>
+            android:id="@+id/orderitem_image"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            app:layout_constraintStart_toEndOf="@id/orderitem_image"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <TextView
+                android:id="@+id/orderitem_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="product name" />
@@ -26,15 +38,46 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-                <!-- simple form with + and - buttons and current quantity -->
+
+                <Button
+                    android:layout_width="30dp"
+                    android:layout_height="match_parent"
+                    android:textSize="30sp"
+                    android:layout_marginEnd="@dimen/margin_small"
+                    android:minHeight="30dip"
+                    android:padding="0dp"
+                    android:fontFamily="sans-serif-light"
+                    android:text="+"/>
+
+                <EditText
+                    android:id="@+id/editTextNumberSigned2"
+                    android:layout_width="30dp"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/transparent"
+                    android:ems="10"
+                    android:textAlignment="center"
+                    android:inputType="numberSigned"
+                    android:text="1" />
+
+                <Button
+                    android:layout_width="30dp"
+                    android:layout_height="match_parent"
+                    android:textSize="30sp"
+                    android:layout_marginStart="@dimen/margin_small"
+                    android:minHeight="30dip"
+                    android:padding="0dp"
+                    android:fontFamily="sans-serif-light"
+                    android:text="-"/>
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="120zł"/>
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="@dimen/margin_big"
+                    android:text="200,00zł"
+                    android:gravity="center"/>
             </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
