--- a/app/src/main/res/layout/list_item_order.xml
+++ b/app/src/main/res/layout/list_item_order.xml
@@ -1,83 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/margin_regular">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
         android:layout_marginStart="@dimen/margin_small"
-        android:layout_marginEnd="@dimen/margin_small"
         android:layout_marginTop="@dimen/margin_big"
-        android:layout_marginBottom="@dimen/margin_small">
+        android:layout_marginEnd="@dimen/margin_small"
+        android:layout_marginBottom="@dimen/margin_small"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/orderitem_image"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:layout_marginStart="@dimen/margin_small"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/orderitem_name"
+            style="@style/OrderItemName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_regular"
+            android:text="MSI GeForce RTX 3090 GAMING X TRIO 24GB GDDR6X"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@id/orderitem_image"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
+            android:id="@+id/order_quantity_form"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_regular"
+            android:orientation="horizontal"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@id/orderitem_image"
+            app:layout_constraintTop_toBottomOf="@id/orderitem_name">
+
+            <Button
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="@dimen/margin_small"
+                android:fontFamily="sans-serif-light"
+                android:minHeight="30dip"
+                android:padding="0dp"
+                android:text="+"
+                android:textSize="30sp" />
+
+            <EditText
+                android:id="@+id/editTextNumberSigned2"
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:ems="10"
+                android:inputType="numberSigned"
+                android:text="1"
+                android:textAlignment="center" />
+
+            <Button
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="@dimen/margin_small"
+                android:fontFamily="sans-serif-light"
+                android:minHeight="30dip"
+                android:padding="0dp"
+                android:text="-"
+                android:textSize="30sp" />
+        </LinearLayout>
+
+        <TextView
+            style="@style/OrderItemPrice"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            app:layout_constraintStart_toEndOf="@id/orderitem_image"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <TextView
-                android:id="@+id/orderitem_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="product name" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <Button
-                    android:layout_width="30dp"
-                    android:layout_height="match_parent"
-                    android:textSize="30sp"
-                    android:layout_marginEnd="@dimen/margin_small"
-                    android:minHeight="30dip"
-                    android:padding="0dp"
-                    android:fontFamily="sans-serif-light"
-                    android:text="+"/>
-
-                <EditText
-                    android:id="@+id/editTextNumberSigned2"
-                    android:layout_width="30dp"
-                    android:layout_height="match_parent"
-                    android:background="@android:color/transparent"
-                    android:ems="10"
-                    android:textAlignment="center"
-                    android:inputType="numberSigned"
-                    android:text="1" />
-
-                <Button
-                    android:layout_width="30dp"
-                    android:layout_height="match_parent"
-                    android:textSize="30sp"
-                    android:layout_marginStart="@dimen/margin_small"
-                    android:minHeight="30dip"
-                    android:padding="0dp"
-                    android:fontFamily="sans-serif-light"
-                    android:text="-"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="@dimen/margin_big"
-                    android:text="200,00zł"
-                    android:gravity="center"/>
-            </LinearLayout>
-
-        </LinearLayout>
+            android:layout_marginTop="@dimen/margin_big"
+            android:gravity="center"
+            android:text="200,00zł"
+            app:layout_constraintHorizontal_bias="0.826"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/order_quantity_form"
+            app:layout_constraintTop_toBottomOf="@id/orderitem_name" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
