--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,6 @@
     <dimen name="product_price_text_size_small">13sp</dimen>
     <dimen name="product_name_text_size_big">18sp</dimen>
     <dimen name="product_price_text_size_big">16sp</dimen>
+    <dimen name="order_item_name_text_size">16sp</dimen>
+    <dimen name="order_item_price_text_size">15sp</dimen>
 </resources>
