--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/margin_small"
+    android:layout_margin="@dimen/margin_regular"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
@@ -12,6 +12,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="18sp"
+        android:textColor="@color/black"
         android:text="Our recommendation" />
 
     <androidx.cardview.widget.CardView
@@ -19,11 +21,15 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/main_recommended"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:cardCornerRadius="6dp"
+        app:cardElevation="3dp"
+        app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="@dimen/margin_regular"
             android:orientation="vertical">
 
             <ImageView
@@ -32,15 +38,19 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                style="@style/ProductNameBigStyle"
                 android:id="@+id/main_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_regular"
                 android:text="MSI GeForce RTX 3090 GAMING X TRIO 24GB GDDR6X" />
 
             <TextView
+                style="@style/ProductPriceBigStyle"
                 android:id="@+id/main_price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textAlignment="textEnd"
                 android:text="8080,00 PLN"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
