created proper intents

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -84,6 +84,7 @@
             android:text="Bestseller" />
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/bestseller_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
