successfully displayed data from the db

--- a/app/src/main/res/layout/fragment_list_item_product.xml
+++ b/app/src/main/res/layout/fragment_list_item_product.xml
@@ -47,13 +47,14 @@
                 android:layout_marginTop="@dimen/margin_small"
                 android:layout_marginBottom="@dimen/margin_big" />
 
+            <!-- TODO: Sometimes this aligns to the right and sometimes not wtf -->
             <TextView
                 style="@style/ProductPriceSmallStyle"
                 android:id="@+id/product_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:textAlignment="gravity" />
+                android:textAlignment="textEnd" />
         </LinearLayout>
     </LinearLayout>
 
