--- a/app/src/main/res/layout/fragment_list_item_review.xml
+++ b/app/src/main/res/layout/fragment_list_item_review.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="@dimen/margin_big">
 
+    <!-- TODO: bottom nav overlaps last review   -->
     <LinearLayout
         android:id="@+id/review_info"
         android:layout_width="match_parent"
