--- a/app/src/main/res/layout/fragment_description_tab.xml
+++ b/app/src/main/res/layout/fragment_description_tab.xml
@@ -14,6 +14,5 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="Here will be product description"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
