used prebuilt bottom nav activity

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,7 @@
     <dimen name="product_price_text_size_big">16sp</dimen>
     <dimen name="order_item_name_text_size">16sp</dimen>
     <dimen name="order_item_price_text_size">15sp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
