--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/action_home"
-        android:enabled="true"
-        android:icon="@drawable/ic_action_home"
-        android:title="Home"
-        app:showAsAction="ifRoom"
-        />
+<!--    <item-->
+<!--        android:id="@+id/action_home"-->
+<!--        android:enabled="true"-->
+<!--        android:icon="@drawable/ic_action_home"-->
+<!--        android:title="Home"-->
+<!--        app:showAsAction="ifRoom" />-->
+
+<!--    <item-->
+<!--        android:id="@+id/action_search"-->
+<!--        android:enabled="true"-->
+<!--        android:icon="@drawable/ic_action_search"-->
+<!--        android:title="Search"-->
+<!--        app:showAsAction="ifRoom" />-->
+
+<!--    <item-->
+<!--        android:id="@+id/action_order"-->
+<!--        android:enabled="true"-->
+<!--        android:icon="@drawable/ic_action_order"-->
+<!--        android:title="Order"-->
+<!--        app:showAsAction="ifRoom" />-->
 
     <item
-        android:id="@+id/action_search"
-        android:enabled="true"
-        android:icon="@drawable/ic_action_search"
-        android:title="Search"
-        app:showAsAction="ifRoom"/>
-
+        android:id="@+id/navigation_home"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="@string/title_home" />
     <item
-        android:id="@+id/action_order"
-        android:enabled="true"
-        android:icon="@drawable/ic_action_order"
-        android:title="Order"
-        app:showAsAction="ifRoom"/>
+        android:id="@+id/navigation_dashboard"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="@string/title_dashboard" />
+    <item
+        android:id="@+id/navigation_notifications"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/title_notifications" />
 </menu>
