--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,5 +13,34 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="colorControlActivated">@color/yellow</item>
+        <item name="android:windowTranslucentNavigation">false</item>
+    </style>
+
+    <style name="ProductNameSmallStyle">
+        <item name="android:textSize">@dimen/product_name_text_size_small</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="ProductNameBigStyle" parent="ProductNameSmallStyle">
+        <item name="android:textSize">@dimen/product_name_text_size_big</item>
+    </style>
+
+    <style name="ProductPriceSmallStyle">
+        <item name="android:textSize">@dimen/product_price_text_size_small</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="ProductPriceBigStyle" parent="ProductPriceSmallStyle">
+        <item name="android:textSize">@dimen/product_price_text_size_big</item>
+    </style>
+
+    <style name="OrderItemPrice" parent="ProductNameSmallStyle">
+        <item name="android:textSize">@dimen/order_item_price_text_size</item>
+    </style>
+
+    <style name="OrderItemName" parent="ProductNameSmallStyle">
+        <item name="android:textSize">@dimen/order_item_name_text_size</item>
     </style>
 </resources>
